# parser_kucoin

./: .gitignore  README.md  coins_list.csv  config.py  database.db  main.py  pyproject.toml  requirements.txt  session_name.session  start_parser.py  test.py
App_kucoin/: NN_dataset.py  Sqlither.py  __init__.py  api.py  models.py
App_kucoin/Log/: Loger.py  __init__.py
core/: DataManager.py  __init__.py  data_manager.py
core/database/: __init__.py  base.py  engine.py  models.py  orm_query.py
core/database/orm/: __init__.py  orm_query_coin.py  orm_query_news.py
core/models/: __init__.py  dataset.py  models.py
core/settings/: __init__.py  config.py  news_parser_settings.py
core/utils/: __init__.py  case_converter.py  clear_datasets.py  configure_logging.py  dataset_types.py  decorater_auto.py  gui_deps.py  tesseract_img_text.py
data/: coins_list.csv
handlers/: att_parser.py  parser_handler.py  process_handler.py
parser_driver/: __init__.py  api.py  data.py  device_real.py  web_driver.py
parser_driver/parsers/: __init__.py  parser_bcs.py  parser_kucoin.py  parser_kucoin_api.py  parser_marketcap.py  parser_news.py  parser_news_api.py  parser_telegram.py
settings/: tg_words.json
