[tool.poetry]
name = "parser-kucoin"
version = "2.0.0"
description = ""
authors = ["igornet0"]
readme = "README.md"
packages = [{include = "parser_kucoin"}] 

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dotenv = ">=1.1.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
numpy = ">=2.2.4,<3.0.0"
kucoin-python = ">=1.0.26,<2.0.0"
pydantic = ">=2.11.2,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
setuptools = ">=78.1.0,<79.0.0"
aiofiles = ">=24.1.0,<25.0.0"
pyyaml = ">=6.0.2,<7.0.0"
aioconsole = ">=0.8.1,<0.9.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
aiohttp = "^3.12.12"

[tool.poetry.group.gui.dependencies]
sktime = ">=0.37.0,<0.38.0"
undetected-chromedriver = ">=3.5.5,<4.0.0"
pillow = ">=11.1.0,<12.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
pytesseract = ">=0.3.13,<0.4.0"
pyautogui = ">=0.9.54,<0.10.0"
pynput = ">=1.8.1,<2.0.0"
keyboard = ">=0.13.5,<0.14.0"
matplotlib = ">=3.10.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"